# BrandVideoScript

./: .env.deploy.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  paths.py
backend/app/db/: mongo.py
backend/app/middleware/: request_logging.py
backend/app/models/: agent_outputs.py  artifact_stale.py  choice_history.py  negotiation_ops.py  (+6 more)
backend/scripts/: distill_brand_wiki.py  export_activity_logs.py  phase0_probe.py  test_requirements_gen.py
backend/tests/: test_activity_logs.py  test_agent_context.py  test_agent_llm.py  test_agent_messages.py  test_agent_prompts.py  test_agent_stream.py  test_app_log.py  test_artifact_stale.py  test_audience_analysis_proposals.py  test_audit_log.py  test_brand_brief_pipeline.py  test_brand_insight_proposals.py  test_brand_ops.py  test_brand_requirements.py  test_brand_search_queries.py  test_brand_wiki.py  test_brief_parse.py  test_choice_history.py  test_context_compress.py  test_coordinator.py  test_coordinator_intent.py  test_expert_ops.py  test_expert_suggestion_proposals.py  test_graph_ops.py  test_graph_writer.py  test_llm_client_stream.py  test_llm_streaming.py  test_modification_schemes.py  test_persona_ops.py  test_persona_provision.py  test_prompt_loader.py  test_script_ops.py  test_script_snapshots.py  test_script_validate.py  test_sse.py  test_tavily_client.py  test_token_estimate.py  test_trace.py  test_vanilla_argue.py  test_vanilla_context.py  (+2 more)
(+406 files in other folders)
